@@ -273,6 +273,11 @@ specifier|private
 name|ResolveData
 name|_data
 decl_stmt|;
+comment|/**      * Boolean.TRUE if a node with a same module id as the one visited       * has already been visited in the current path.      * null if not computed yet      * Boolean.FALSE otherwise      */
+specifier|private
+name|Boolean
+name|_isCircular
+decl_stmt|;
 specifier|public
 name|VisitNode
 parameter_list|(
@@ -792,6 +797,14 @@ name|void
 name|useRealNode
 parameter_list|()
 block|{
+if|if
+condition|(
+name|_parent
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// use real node make sense only for non root module
 name|IvyNode
 name|node
 init|=
@@ -820,6 +833,7 @@ name|_node
 operator|=
 name|node
 expr_stmt|;
+block|}
 block|}
 block|}
 specifier|public
@@ -1470,15 +1484,108 @@ name|getNode
 argument_list|()
 return|;
 block|}
+comment|/**      * Returns true if this node can already be found in the path      * @return      */
 specifier|public
 name|boolean
 name|isCircular
 parameter_list|()
 block|{
-return|return
-name|_node
+if|if
+condition|(
+name|_isCircular
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|_parent
+operator|!=
+literal|null
+condition|)
+block|{
+name|_isCircular
+operator|=
+name|Boolean
 operator|.
-name|isCircular
+name|FALSE
+expr_stmt|;
+comment|// asumme it's false, and see if it isn't by checking the parent path
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|_parent
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|VisitNode
+name|ancestor
+init|=
+operator|(
+name|VisitNode
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|ancestor
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|_isCircular
+operator|=
+name|Boolean
+operator|.
+name|TRUE
+expr_stmt|;
+break|break;
+block|}
+block|}
+block|}
+else|else
+block|{
+name|_isCircular
+operator|=
+name|Boolean
+operator|.
+name|FALSE
+expr_stmt|;
+block|}
+block|}
+return|return
+name|_isCircular
+operator|.
+name|booleanValue
 argument_list|()
 return|;
 block|}
