@@ -16558,6 +16558,298 @@ block|}
 block|}
 specifier|public
 name|void
+name|testCircular3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test case for IVY-400
+comment|// mod6.3 depends on mod6.2, which itself depends on mod6.3,
+comment|// in both configuration default and test
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/2/mod6.3/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|,
+literal|"test"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// we should have mod 6.2 artifact in both configurations
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"default"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"test"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|_settings
+operator|.
+name|setCircularDependencyStrategy
+argument_list|(
+name|IgnoreCircularDependencyStrategy
+operator|.
+name|getInstance
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|report
+operator|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/2/mod6.3/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|,
+literal|"test"
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"default"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"test"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|_settings
+operator|.
+name|setCircularDependencyStrategy
+argument_list|(
+name|WarnCircularDependencyStrategy
+operator|.
+name|getInstance
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|report
+operator|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/2/mod6.3/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|,
+literal|"test"
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"default"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"test"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|_settings
+operator|.
+name|setCircularDependencyStrategy
+argument_list|(
+name|ErrorCircularDependencyStrategy
+operator|.
+name|getInstance
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/2/mod6.3/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|,
+literal|"test"
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"no exception with circular dependency strategy set to error"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|CircularDependencyException
+name|ex
+parameter_list|)
+block|{
+name|assertEquals
+argument_list|(
+literal|"[ org6 | mod6.3 | 1.2 ]->[ org6 | mod6.2 | 1.1 ]->[ org6 | mod6.3 | 1.2 ]"
+argument_list|,
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
 name|testRegularCircular
 parameter_list|()
 throws|throws
